# opm-thesis

./: .dockerignore  .gitignore  .gitmodules  .lfsconfig  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json  docker-compose.devcontainer.yml
.github/workflows/: formatting.yml  initialize.yml  linting.yml
data/2023-06-03_finger_discrimination_pilot_jan/: README.md  Task_1_16.xdf  Task_1_17.xdf
misc_code/nottingham_finger_gesture_discrimination/: basic_button_press.m  finger_discrimination.asv  finger_discrimination.m  finger_discrimination_rh_0.csv  finger_discrimination_rh_1.csv  finger_discrimination_rh_hd_2.csv  finger_discrimination_rh_hd_3.csv  finger_discrimination_rh_hd_4.csv  finger_discrimination_rh_hd_5.csv  finger_discrimination_rh_hd_6.csv  gesture_discrimination.m  gesture_discrimination_rh_hd_0.csv  gesture_discrimination_rh_hd_1.csv  gesture_discrimination_rh_hd_2.csv  gesture_discrimination_rh_hd_3.csv  gesture_discrimination_rh_hd_4.csv
notebooks/: Gestures_data.ipynb  Reading_Task_1_16.ipynb  checking_data.ipynb  classifying_notepad.ipynb  correlation.ipynb  data_nott_reading.ipynb  hilbert_transforms.ipynb  try_stuff.ipynb
notebooks/figures/: beta_all_sensors_Figures.ipynb  beta_band_classifier.ipynb  beta_power_Figures.ipynb  correlation.ipynb  csp.ipynb  csp_beta_Figures.ipynb  figure_tfr_plus_csp.ipynb  tfr.ipynb  (+3 more)
opm_thesis/: classify_epochs.py  classify_power.py  epochs_freq_bands.py  finding_events.py  plot_epochs.py  process_epochs.py  try_things.py
(+68 files in other folders)
